# OBOFoundry.github.io

./: .flake8  .gitignore  .prettierignore  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Create_aism.md  Dockerfile  Googletruths.co  Jenkinsfile  LICENSE-code.md  LICENSE.md  Makefile  NewOntologyRegistrationInstructions.md  README-sitedev.md  README.md  _config.yml  _config_header.yml  about-OBO-Foundry.html  about.html  about.md  allnews.html  biome.json  browse.html  build.sh  docker-compose.yml  docker_site.sh  downloads.html  faq.html  id-policy.html  id-policy.md  index.html  index2.html  pages.md  participate.html  pyproject.toml  requirements.txt  resources.md  setup.cfg  (+1 more)
_data/: alumni.yml  editorial.yml  operations.yml  outreach.yml  roles.yml  technical.yml
_includes/: aboutme.html  archive.html  citation_toc.md  completed_reviews_table.html  docs_toc.md  footer.html  head.html  header.html  navbar.html  navigation.html  news.html  ontobee.html  ontobee_search.html  ontologies.html  ontology_table.html  people_table.html  post.json  review_table.html  scripts.html  semantic.cache  table_widget.html  tag_sidebar.html  widget.html
_layouts/: browse_layout.html  check.html  citation.html  community.html  default.html  doc.html  faq.html  ont.html  ontology_detail.html  people_detail.html  portal.html  post.html  principle.html
_plugins/: bioportal_identifier.rb
_posts/: 2015-07-28-welcome.md  2015-08-08-welcome.md  2015-08-11-welcome.md  2015-09-22-DO.md  2015-09-22_DO.txt  2015-10-01-mro.md  2016-03-15-ACS.md  2016-03-22-BiocurationTalk.md  README  (+20 more)
(+696 files in other folders)
