##########################
# Setup.py Configuration #
##########################
[metadata]
name = obofoundry
version = 0.0.1-dev

[options]
install_requires =
    pyyaml
    requests
    pydantic
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    obofoundry = obofoundry.cli:main
